# rag_prototype

./: .gitignore  main.py  pyproject.toml  rag_server.py
rag/: .env  orchestration.py
rag/Ingestion/: embed.py  preprocess.py
rag/Pipeline/: rag.py  retriver.py
rag/Pipeline/Models/: flash.py
rag/TimetableData/: data.json
rag/TimetableData/processed/: clean_chunks.json
rag/VectorStore/chroma/664f0c50-db93-42c4-8747-576f8b7ed217/: index_metadata.pickle
